rakefile and updated nodes

--- a/rakefile
+++ b/rakefile
@@ -1,13 +1,14 @@
 REPO='https://github.com/aty3/pp.git'
 
 
-SSH= 'ssh -A -l attila_csender
+SSH= 'ssh -A -i /home/attila_csender/puppet/modules/puppet/files/logstash1.priv -l attila_csender'
 
-desc "Run Puppet on ENV['CLIENT']"
+desc "Run Puppet" 
 task :apply do
 	client = ENV['CLIENT']
 	sh "git push"
 	sh "#{SSH} #{client} pull-updates"
+end
 
 desc "Bootstrap puppet on ENV['CLIENT'] with
 	hostname ENV['HOSTNAME']"
@@ -15,11 +16,9 @@ task :bootstrap do
 	client = ENV['CLIENT']
 	hostname = ENV['HOSTNAME'] || client
 	commands= <<BOOTSTRAP
-		sudo hostname #{hostname} && \
-		sudo su - c 'echo #{hostname} > /etc/hostname' && \
-		apt-get update && apt-get -y install git puppet && \
+		sudo apt-get update && sudo apt-get -y install git puppet && \
 		git clone #{REPO} puppet && \
-		sudo puppet apply --modulepath=/home/ubuntu/puppet/modules home/ubuntu/puppet/manifests/
+		sudo puppet apply --modulepath=/home/attila_csender/puppet/modules /home/attila_csender/puppet/manifests/
 BOOTSTRAP
 	sh "#{SSH} #{client} '#{commands}'"
 end
